--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "knplabs/knp-menu-bundle": ">1.0,<2.1",
         "white-october/pagerfanta-bundle": "1.0.*@dev",
         "twig/twig": ">= 1.9.0",
-        "twig/extensions": "1.0.*",
+        "twig/extensions": "~1.0",
         "robloach/component-installer": ">= 0.0.11",
         "afarkas/html5shiv": ">= 3.7.0",
         "components/jquery": ">= 1.9.0, < 2.0.0",
